# CakebrewJs2-ds

./: .gitignore  .gitmodules  CMakeCogMain.j2  CMakeCogMain.py  CMakeLists.txt  CakebrewJs2.qmlproject  CakebrewJs2.qmlproject.qtds  Cakebrewjs.desktop  LICENSE  README.md  SBOM.md  config.h  deploy.md  main.cpp  main.qml  nohup.out  publiccode.yml  qmlmodules  qtquickcontrols2.conf
Bal/: BrewData.cpp  BrewData.h  BrewDataPrivate.cpp  BrewDataPrivate.h  BrewDataPrivate.py  CaskRow.cpp  CaskRow.h  FormulaRow.cpp  JsAsync.cpp  ParseCmd.cpp  ParseCmd.h  property.py  searchresultrow.h  shellcmd.cpp  shellcmd.h
Design/: CMakeLists.txt  Design.qmlproject  Design.qmlproject.qtds  Design.qmlproject.qtds.f4cd26a  qds.cmake  qtquickcontrols2.conf
Design/App/: CMakeLists.txt
Design/App/autogen/: environment.h
Design/Bal/: BrewData.qml  CMakeLists.txt  qmldir
Design/Core/: CMakeLists.txt  CoreBusyIndicator.qml  CoreButton.qml  CoreCheckBox.qml  CoreComboBox.qml  CoreGroupBox.qml  CoreLabel.qml  CoreLabelSelect.qml  CoreSwitch.qml  CoreSystemPalette.qml  CoreTextArea.qml  CoreTextField.qml  CoreToolTip.qml  qmldir
Design/Design/: CMakeLists.txt  Constants.qml  qmldir
Design/Design/designer/: plugin.metainfo
Design/DesignContent/: About.qml  App.qml  BottomBar.qml  CMakeLists.txt  CollapseableTableView.qml  ExtendableHeader.qml  HeaderToolbar.qml  Home.qml  HyperlinkBtn.qml  HyperlinkBtnInfo.qml  Info.qml  InfoCask.qml  InfoFormula.qml  PreviewData.qml  Screen01.qml  Search.qml  SearchListItem.qml  Settings.qml  TableHeaderLabel.qml  qmldir
bal/: BrewData.cpp  BrewData.h  BrewData.py  BrewDataPrivate.cpp  BrewDataPrivate.h  BrewDataPrivate.py  CMakeLists.txt  CaskRow.cpp  CaskRow.h  FormulaRow.cpp  FormulaRow.h  GridCell.cpp  GridCell.h  GridCell.py  JsAsync.cpp  JsAsync.h  ParseCmd.cpp  ParseCmd.h  SearchResultRow.py  ServiceRow.cpp  ServiceRow.h  property.py  searchresultrow.cpp  searchresultrow.h  shellcmd.cpp  shellcmd.h
content/: About.qml  App.qml  BottomBar.qml  CMakeLists.txt  CollapseableGrid.qml  CollapseableTableView.qml  CollapseableTableViewFormula.qml  ExtendableHeader.qml  GridLayoutHeader.qml  HeaderToolbar.qml  Home.qml  HomeFormulaGrid.qml  HomeGrid.qml  HyperlinkBtn.qml  HyperlinkBtnInfo.qml  Info.qml  InfoCask.qml  InfoFormula.qml  LoadingData.qml  PreviewData.qml  Screen01.ui.qml  Search.qml  SearchListItem.qml  Settings.qml  TableHeaderLabel.qml
deployScript/: Cakebrewjs.sh  postinst  prerm
dummydata/Brew/: BrewData.qml  qmldir
dummydata/Dummydata/: ModelData.qml  qmldir
imports/: CMakeLists.txt
imports/CakebrewJs2/: CMakeLists.txt  Constants.qml  DataStore.qml  qmldir
imports/CakebrewJs2/designer/: plugin.metainfo
imports/Core/: CMakeLists.txt  CoreBusyIndicator.qml  CoreButton.qml  CoreCheckBox.qml  CoreComboBox.qml  CoreLabel.qml  CoreSwitch.qml  CoreTextArea.qml  CoreTextField.qml  CoreToolTip.qml  qmldir
imports/core/: CMakeLists.txt  CoreButton.qml  CoreComboBox.qml  CoreLabel.qml  CoreSystemPalette.qml  qmldir
scripts/: CMakeCogLib.py  GenQmlDirAndCMakeLib.py  hppTemplates.txt  parseHpp.py  propertyLib.py  runCog.sh
src/: import_qml_plugins.h  main.cpp
